--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A whimsical gothic steampunk playground for science, games, and art.">
     <title>Graveyard Chemist Playground</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -21,12 +22,19 @@
     </header>
 
     <main>
-        <p>Step into my whimsical world.</p>
+        <section class="homepage-intro">
+            <h2>The Graveyard Chemist's Playground</h2>
+            <p>
+                A realm where quantum chemistry whispers in gothic corridors,  
+                gears turn in elegant symmetry, and the night sky holds infinite mysteries.  
+                Whether drawn by science, art, or the love of a well-spun tale,  
+                step forward—this labyrinth welcomes you.
+            </p>
+        </section>
     </main>
 
     <footer>
-        <p>© 2025 MGUtashiro | Hosted on Neocities</p>
+        <p>© 2025 MGUtashiro | Hosted on GitHub Pages</p>
     </footer>
 </body>
 </html>
-
