--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
     </main>
 
     <footer>
-        <p>© 2025 Monica Utashiro | Hosted on GitHub Pages</p>
+        <p>© 2025 MGUtashiro | Hosted on GitHub Pages</p>
     </footer>
 </body>
 </html>
