--- a/index.html
+++ b/index.html
@@ -4,37 +4,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A whimsical gothic steampunk playground for science, games, and art.">
-    <title>Graveyard Chemist Playground</title>
+    <title>Graveyard Chemist Little Playground</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Welcome to My Labyrinth</h1>
-        <nav>
-            <ul>
-                <li><a href="about.html">About</a></li>
-                <li><a href="blog.html">Computational Chemistry</a></li>
-                <li><a href="library.html">Books & Music</a></li>
-                <li><a href="games.html">Games</a></li>
-                <li><a href="projects.html">SVG & Programming</a></li>
-            </ul>
-        </nav>
-    </header>
+    <div class="elevator-container">
+        <!-- Flashing Lights Setup --> 
+        <div id="topLeftLamp"></div>
+        <div id="topMiddleLamp"></div>
+        <div id="topRightLamp"></div>
+        <div id="bottomLeftLamp"></div>
+        <div id="bottomRightLamp"></div>
 
-    <main>
-        <section class="homepage-intro">
-            <h2>The Graveyard Chemist's Playground</h2>
-            <p>
-                A realm where quantum chemistry whispers in gothic corridors,  
-                gears turn in elegant symmetry, and the night sky holds infinite mysteries.  
-                Whether drawn by science, art, or the love of a well-spun tale,  
-                step forward—this labyrinth welcomes you.
-            </p>
-        </section>
-    </main>
+        <!-- Elevator Door Setup -->
+        <div class="elevator-door" id="elevator-door"></div>
+        
+        <!-- Pressure Meter Setup -->
+        <div class="pressure-meter"></div>
+
+        <!-- Button Panel Setup -->
+        <div class="button-panel">
+            <button class="menu-button" id="btn-intro" onclick="pressButton('intro')">
+                <img src="Attachments/homepageimage/kuchipachi0.png" class="button-icon">
+            </button>
+            <button class="menu-button" id="btn-laser" onclick="pressButton('laser')">
+                <img src="Attachments/homepageimage/kittylaser0.png" class="button-icon">
+            </button>
+            <button class="menu-button" id="btn-psi" onclick="pressButton('psi')">
+                <img src="Attachments/homepageimage/phi0.png" class="button-icon">
+            </button>
+            <button class="menu-button" id="btn-game" onclick="pressButton('game')">
+                <img src="Attachments/homepageimage/gameicon0.png" class="button-icon">
+            </button>
+            <button class="menu-button" id="btn-books" onclick="pressButton('books')">
+                <img src="Attachments/homepageimage/bookicon0.png" class="button-icon">
+            </button>
+            <button class="menu-button" id="btn-meme1" onclick="pressButton('meme1')">
+                <img src="Attachments/homepageimage/face0.png" class="button-icon">
+            </button>
+            <button class="menu-button" id="btn-meme2" onclick="pressButton('meme2')">
+                <img src="Attachments/homepageimage/skeletonicon0.png" class="button-icon">
+            </button>
+            <button class="menu-button" id="btn-info" onclick="pressButton('info')">
+                <img src="Attachments/homepageimage/question0.png" class="button-icon">
+            </button>
+        </div>
+    
+    </div>
 
     <footer>
         <p>© 2025 MGUtashiro | Hosted on GitHub Pages</p>
     </footer>
+
+    <script src="script.js"></script>
+
 </body>
 </html>
