--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
   <!-- PRESS A BUTTON Label -->
   <div id="press-button-label">Press a Button</div>
-
+  
+  <h1 class="press-button-text">Press a Button</h1>
   <div class="elevator-container">
     <!-- Lamps -->
     <div id="Edisonlamp_L"></div>
