elevator door frame added

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <div id="Edisonlamp_R"></div>
     <div id="LBottomLight"></div>
     <div id="RBottomLight"></div>
+    <div class="elevator-frame"></div>
+    <div class="elevator-door" id="elevator-door"></div>
 
     <!-- Elevator Door -->
     <div class="elevator-door" id="elevator-door"></div>
