--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="LBottomLight"></div>
     <div id="RBottomLight"></div>
     <div class="elevator-frame"></div>
-    <div class="elevator-door" id="elevator-door"></div>
+    <div class="elevator-frame" id="elevator-frame"></div>
 
     <!-- Elevator Door -->
     <div class="elevator-door" id="elevator-door"></div>
