--- a/index.html
+++ b/index.html
@@ -10,17 +10,14 @@
 
 <body>
   <!-- PRESS A BUTTON Label -->
-  <div id="press-button-label">Press a Button</div>
-  
   <h1 class="press-button-text">Press a Button</h1>
-  <div class="elevator-container">
+  <main class="elevator-container">
     <!-- Lamps -->
     <div id="Edisonlamp_L"></div>
     <div id="Edisonlamp_M"></div>
     <div id="Edisonlamp_R"></div>
     <div id="LBottomLight"></div>
     <div id="RBottomLight"></div>
-    <div class="elevator-frame"></div>
     <div class="elevator-frame" id="elevator-frame"></div>
 
     <!-- Elevator Door -->
@@ -28,6 +25,7 @@
 
     <!-- Pressure Meter -->
     <div class="pressure-meter" id="pressure-meter"></div>
+    <div id="PM_12"></div>
     <div id="PM_2"></div>
     <div id="PM_10"></div>
 
@@ -78,7 +76,7 @@
     <div id="face_1"></div>
     <div id="coolskeleton_1"></div>
     <div id="question_1"></div>
-  </div>
+  </main>
 
   <footer>
     <p>© 2025 MGUtashiro | Hosted on GitHub Pages</p>
