edited css and html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
   <!-- PRESS A BUTTON Label -->
+  <div id="press-button-label">Press a Button</div>
   <h1 class="press-button-text">Press a Button</h1>
   <main class="elevator-container">
     <!-- Lamps -->
@@ -36,7 +37,7 @@
       </button>
 
       <button class="menu-button" id="btn-laser" onclick="pressButton('laser')">
-        <img src="Attachments/homepageimage/kittylaser0.png" class="button-icon" alt="Laser Cat">
+        <img src="Attachments/homepageimage/kittylaser_0.png" class="button-icon" alt="Laser Cat">
       </button>
 
       <button class="menu-button" id="btn-psi" onclick="pressButton('psi')">
@@ -44,11 +45,11 @@
       </button>
 
       <button class="menu-button" id="btn-game" onclick="pressButton('game')">
-        <img src="Attachments/homepageimage/gameicon0.png" class="button-icon" alt="Game">
+        <img src="Attachments/homepageimage/game_0.png" class="button-icon" alt="Game">
       </button>
 
       <button class="menu-button" id="btn-books" onclick="pressButton('books')">
-        <img src="Attachments/homepageimage/book0.png" class="button-icon" alt="Books">
+        <img src="Attachments/homepageimage/book_0.png" class="button-icon" alt="Books">
       </button>
 
       <button class="menu-button" id="btn-meme1" onclick="pressButton('meme1')">
