deleged imgs, added menu svg to see if the menu box is there

--- a/index.html
+++ b/index.html
@@ -8,17 +8,7 @@
 </head>
 
 <body>
-  <nav class="navbar_svg-frame">
-    <div class="navbar_container">
-      <ul class="navbar__menu">
-        <li class="navbar__item"></li>
-        <li class="navbar__item"></li>
-        <li class="navbar__item"></li>
-        <li class="navbar__item"></li>
-        <li class="navbar__item"></li>
-      </ul>
-    </div>
-  </nav>
+  <nav class="navbar_svg-frame"></nav>
 </body>
 
 
