put csv directly into html instead of having attachment

--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
 
 
 <body>
-  <nav class="navbar_svg-frame"></nav>
+  <div class="navbar_svg-frame">
+    <svg xmlns="http://www.w3.org/2000/svg" width="207" height="329" fill="none">
+      <g id="Frame 2" stroke="#000">
+        <path id="circuit" stroke-width=".5" 
+        d="M8 42.873v35.453m61.435-20.039V29M31.356 58.287v243.547m-.424-.243 74.193.248m16.958-.005 70.917.226m-.231-.226V58.287m.231.232H8m152.394-.232V29m-90.727 0h90.958m-55.346 269.751v6.166m3.083-9.248V308m3.084-9.249v6.166m3.083-9.248V308m4.625-9.249v6.166m3.083-9.248V308"/>
+        <path id="resistor" stroke-width=".3" d="M97.15 21.15h29.7v13.7h-29.7z"/><path id="opamp" stroke-width=".25" d="M97.222 54.875h-.137l-5.9-14.75h41.63l-5.9 14.75H97.222Zm.125.25h29.306v11.75H97.347v-11.75Z"/>
+      </g>
+    </svg>
+  </div>
 </body>
 
 
