--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
 
 <body>
   <div class="navbar_svg-frame">
-    <svg xmlns="http://www.w3.org/2000/svg" width="460" height="280" fill="none">
-      <g id="Frame 2" stroke="#000000">
-        <path id="circuit" stroke-width=".5" 
-        d="M8 42.873v35.453m61.435-20.039V29M31.356 58.287v243.547m-.424-.243 74.193.248m16.958-.005 70.917.226m-.231-.226V58.287m.231.232H8m152.394-.232V29m-90.727 0h90.958m-55.346 269.751v6.166m3.083-9.248V308m3.084-9.249v6.166m3.083-9.248V308m4.625-9.249v6.166m3.083-9.248V308"/>
-        <path id="resistor" stroke-width=".3" d="M97.15 21.15h29.7v13.7h-29.7z"/>
-        <path id="opamp" stroke-width=".25" d="M97.222 54.875h-.137l-5.9-14.75h41.63l-5.9 14.75H97.222Zm.125.25h29.306v11.75H97.347v-11.75Z"/>
+    <svg width="207" height="519" viewBox="0 0 207 519" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <g id="Frame 2">
+      <path id="circuit" d="M8 52.5193V112.624M69.4354 78.6519V29M31.3562 78.6519V491.547M30.9323 491.134L105.125 491.556M122.083 491.547L193 491.929M192.769 491.547V78.6519M193 79.0439H8M160.394 78.6519V29M69.6667 29L160.625 29M105.279 486.32V496.773M108.362 481.094V502M111.446 486.32V496.773M114.529 481.094V502M119.154 486.32V496.773M122.237 481.094V502" stroke="black" stroke-width="0.5"/>
+      <rect id="resistor" x="97.15" y="21.15" width="29.7" height="13.7" stroke="black" stroke-width="0.3"/>
+      <path id="opamp" d="M97.2222 54.875H97.0972H97.0846L91.1846 40.125H132.815L126.915 54.875H126.903H126.778H97.2222ZM97.3472 55.125H126.653V66.875H97.3472V55.125Z" stroke="black" stroke-width="0.25"/>
       </g>
-    </svg>
+      </svg>
   </div>
 </body>
 
