added the menu box

--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
       </g>
       </svg>
   </div>
+  <div clas="svg-menu">
+    <svg width="144" height="386" viewBox="0 0 144 386" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <g id="Frame2">
+      <rect width="144" height="386" rx="6" fill="#121212"/>
+      </g>
+      </svg>
+  </div>
 </body>
 
 
