--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
   <div class="navbar_svg-frame">
+    <!--for circuit system-->
     <svg width="207" height="519" viewBox="0 0 207 519" fill="none" xmlns="http://www.w3.org/2000/svg">
       <g id="Frame 2">
       <path id="circuit" d="M8 52.5193V112.624M69.4354 78.6519V29M31.3562 78.6519V491.547M30.9323 491.134L105.125 491.556M122.083 491.547L193 491.929M192.769 491.547V78.6519M193 79.0439H8M160.394 78.6519V29M69.6667 29L160.625 29M105.279 486.32V496.773M108.362 481.094V502M111.446 486.32V496.773M114.529 481.094V502M119.154 486.32V496.773M122.237 481.094V502" stroke="black" stroke-width="0.5"/>
@@ -17,13 +18,12 @@
       <path id="opamp" d="M97.2222 78.875H97.0972H97.0846L91.1846 64.125H132.815L126.915 78.875H126.903H126.778H97.2222ZM97.3472 79.125H126.653V90.875H97.3472V79.125Z" stroke="black" stroke-width="0.25"/>
       </g>
       </svg>
-  </div>
-  <div clas="svg-menu">
-    <svg width="144" height="386" viewBox="0 0 144 386" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <g id="Frame2">
-      <rect width="144" height="386" rx="6" fill="#121212"/>
-      </g>
-      </svg>
+      <!--for menu box-->
+      <svg width="144" height="386" viewBox="0 0 144 386" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <g id="Frame2">
+        <rect width="144" height="386" rx="6" fill="#121212"/>
+        </g>
+        </svg>
   </div>
 </body>
 
