i don't even remember what i did at this point my dog just sneezed all over my laptop

--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@
       <path id="opamp" d="M97.2222 78.875H97.0972H97.0846L91.1846 64.125H132.815L126.915 78.875H126.903H126.778H97.2222ZM97.3472 79.125H126.653V90.875H97.3472V79.125Z" stroke="black" stroke-width="0.25"/>
       </g>
       </svg>
-      <!--for menu box-->
-      <svg width="144" height="386" viewBox="0 0 144 386" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <g id="Frame2">
-        <rect width="144" height="386" rx="6" fill="#121212"/>
-        </g>
-        </svg>
+  </div>
+  <div class="svg-menu">
+    <svg width="144" height="386" viewBox="0 0 144 386" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <rect width="144" height="386" rx="6" fill="#121212"/>
+    </svg>
   </div>
 </body>
 
