--- a/index.html
+++ b/index.html
@@ -23,7 +23,30 @@
     <svg width="144" height="386" viewBox="0 0 144 386" fill="none" xmlns="http://www.w3.org/2000/svg">
       <rect width="144" height="386" rx="6" fill="#121212"/>
     </svg>
-  </div>
+  <div class="ascii-message"></div>
+  <script>
+    fetch('ascii.txt')
+      .then(res => res.text())
+      .then(text => {
+        document.getElementById("asciiArt").innerHTML = `<pre>${text}</pre>`;
+      });
+  </script>
+  <script>
+    const NUM_ASCII_COPIES = 7;
+  
+    fetch('ascii.txt')
+      .then(res => res.text())
+      .then(text => {
+        for (let i = 0; i < NUM_ASCII_COPIES; i++) {
+          const asciiEl = document.createElement('div');
+          asciiEl.className = 'ascii-message';
+          asciiEl.style.top = `${Math.random() * 80 + 5}%`;
+          asciiEl.style.left = `${Math.random() * 80 + 5}%`;
+          asciiEl.innerHTML = `<pre>${text}</pre>`;
+          document.body.appendChild(asciiEl);
+        }
+      });
+  </script>
 </body>
 
 
