changed file name and script

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <script>
     const NUM_ASCII_COPIES = 7;
   
-    fetch('ascii.txt')
+    fetch('/Attachments/bkgd.txt')
       .then(res => res.text())
       .then(text => {
         for (let i = 0; i < NUM_ASCII_COPIES; i++) {
