fixed java script

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <svg width="144" height="386" viewBox="0 0 144 386" fill="none" xmlns="http://www.w3.org/2000/svg">
       <rect width="144" height="386" rx="6" fill="#121212"/>
     </svg>
-  <div class="ascii-message"></div>
+  </div>
+  <script src="script.js"></script>
 </body>
 
 
