fixed layout and animation for loading screen

--- a/index.html
+++ b/index.html
@@ -39,10 +39,6 @@
 				<span class="hex"></span>
 				<div class="loading-label">Loading ...</div>
 			</div>	
-			<!-- Bottom-right quarter: sticker image (we’ll swap its src in JS) -->
-			<img id="sticker" class="sticker"
-			     src="assets/images/moomin1_sticker.png"
-			     alt="Moomin sticker">
         </div>
     </div>
 	
@@ -70,9 +66,9 @@
 				Stray awhile, explore the view-<br>
 				This playground's made for me and you.</p>
 			</section>
-			
-			<!-- C) Bottom-right quarter (moomin ASCII animation) -->
-			<pre id="ob-moomin" class="moomin ob-cell ob-moomin" aria-hidden="true"></pre>
+			<img id="sticker" class="sticker ob-cell ob-moomin"
+			     src="assets/images/moomin1_sticker.png"
+			     alt="Moomin sticker">
 		</div>
 	</div>
 	
