--- a/index.html
+++ b/index.html
@@ -22,26 +22,35 @@
 	<!-- for 5 sec preloader   -->
 	<!-- ============================= -->
 	<div id="preloader" aria-live="polite">
-		<div class="loader-grid">
-			
-			<!-- Boot text section (top 1/3 of page) -->
-			<!-- filled by loader.js -->
-			<pre id="bootText" class="boot"></pre>
-			
-			<!-- Loading hex bar section -->
-			<!-- making each hexagon lightup one by one -->
-			<div id="hexLoader" class="hexbar" aria-label="loading">
-				<span class="hex"></span>
-				<span class="hex"></span>
-				<span class="hex"></span>
-				<span class="hex"></span>
-				<span class="hex"></span>
-				<span class="hex"></span>
-				<div class="loading-label">Loading ...</div>
-			</div>	
-        </div>
-    </div>
-	
+		<div class="loader-grid"><!-- 4×4 grid defined in layout.css -->
+
+    	<!-- A) Boot text — top-left quarter (rows 1–2, cols 1–2) -->
+    	<!-- Filled by loader.js (ellipsis -> typewriter) -->
+    		<pre id="bootText" class="boot" aria-label="Boot messages"></pre>
+
+    		<!-- B) Loading title — top-center (row 1, cols 2–3) -->
+    		<div class="loading-title" aria-hidden="true">Loading &hellip;</div>
+
+    		<!-- C) Hex tray — center quarter (rows 2–3, cols 2–3) -->
+    		<div id="hexLoader" class="hexbar" aria-label="Loading progress">
+     
+			<!-- Rounded beveled frame -->
+      			<div class="tray" role="progressbar" aria-valuemin="0" aria-valuemax="6" aria-valuenow="0">
+       			 <!-- Horizontal hexes (colors set via nth-child in CSS) -->
+        			<div class="hexrow">
+          				<span class="hex"></span>
+						<span class="hex"></span>
+						<span class="hex"></span>
+						<span class="hex"></span>
+						<span class="hex"></span>
+						<span class="hex"></span>
+        			</div>
+      			</div>
+    		</div>
+
+  		</div>
+	</div>
+		
 	
 	<!-- ================================ -->
 	<!-- About This Site Instruction Part -->
