changed the loading title to be center, lower than previous

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     	<!-- Filled by loader.js (ellipsis -> typewriter) -->
     		<pre id="bootText" class="boot" aria-label="Boot messages"></pre>
 
-    		<!-- B) Loading title — top-center (row 1, cols 2–3) -->
+    		<!-- B) Loading title — middle-center (row 2, cols 2–3) -->
     		<div class="loading-title" aria-hidden="true">Loading &hellip;</div>
 
     		<!-- C) Hex tray — center quarter (rows 2–3, cols 2–3) -->
