edited the loader line, tried to rotate the hexagon shapes that failed previously

--- a/index.html
+++ b/index.html
@@ -28,12 +28,9 @@
     	<!-- Filled by loader.js (ellipsis -> typewriter) -->
     		<pre id="bootText" class="boot" aria-label="Boot messages"></pre>
 
-    		<!-- B) Loading title — middle-center (row 2, cols 2–3) -->
-    		<div class="loading-title" aria-hidden="true">Loading &hellip;</div>
-
-    		<!-- C) Hex tray — center quarter (rows 2–3, cols 2–3) -->
+    		<!-- B) Hex tray — center quarter (rows 2–3, cols 2–3) -->
     		<div id="hexLoader" class="hexbar" aria-label="Loading progress">
-     
+				<div class="loading-title" aria-hidden="true">Loading &hellip;</div>
 			<!-- Rounded beveled frame -->
       			<div class="tray" role="progressbar" aria-valuemin="0" aria-valuemax="6" aria-valuenow="0">
        			 <!-- Horizontal hexes (colors set via nth-child in CSS) -->
