font change part 1000

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     		<!-- B) Hex tray — center quarter (rows 2–3, cols 2–3) -->
     		<div id="hexLoader" class="hexbar" aria-label="Loading progress">
-				<div class="loading-title" aria-hidden="true">Loading &hellip;</div>
+				<div class="loading-title ff-nes" aria-hidden="true">Loading &hellip;</div>
 			<!-- Rounded beveled frame -->
       			<div class="tray" role="progressbar" aria-valuemin="0" aria-valuemax="6" aria-valuenow="0">
        			 <!-- Horizontal hexes (colors set via nth-child in CSS) -->
