part 1 of loading screen looks good, now editing part 2 of loading screen. changed title of page, added

--- a/index.html
+++ b/index.html
@@ -52,16 +52,21 @@
 	<!-- ================================ -->
 	<!-- About This Site Instruction Part -->
 	<!-- ================================ -->
-	<div id="onboarding" hidden role = "dialog" aria-modal="true" aria-labelledby="ob-title">
-		<h2 id="ob-title">About This Website</h2>
-		
+	<div id="onboarding" hidden role="dialog" aria-modal="true">
+ 
 		<!-- 4x4 grid container -->
-		<div class ="ob-grid ob-grid-4x4">
-			<!-- A) top-left quarter (typed animation) -->
-			<pre id="ob-typed" class="boot ob-cell ob-typed"></pre>
-			
-			<!-- B) center quarter (insstructions) -->
-			<section class="ob-rhyme ob-cell ob-center" arial-label="How to explore">
+		<div class="ob-grid ob-grid-4x4">
+
+    		<!-- A) top-left quarter (typed animation) -->
+   			<pre id="ob-typed" class="boot ob-cell ob-typed"></pre>
+
+    <!-- B) center quarter (instructions) -->
+    <section class="ob-rhyme ob-cell ob-center" aria-label="How to explore">
+      <h3 class="ob-title">
+        Welcome to Graveyard Chemist’s Playground<br>
+        <span class="jp">ウェルカム〜(*´∀*)ﾉ"♡</span>
+      </h3>
+
 				<p>Click and wonder, peek and play,<br>
 				Strange creations light your way.<br>
 				Where art and science twirl in time, <br>
