changed grid location of moomin and on loading part 2 screen

--- a/index.html
+++ b/index.html
@@ -59,13 +59,15 @@
 
     		<!-- A) top-left quarter (typed animation) -->
    			<pre id="ob-typed" class="boot ob-cell ob-typed"></pre>
+			
+			<h3 class="ob-title ob-cell">
+ 		 		Welcome to Graveyard Chemist’s Playground<br>
+ 				<span class="jp">ウェルカム〜(*´∀*)ﾉ"♡</span>
+			</h3>
+
 
     <!-- B) center quarter (instructions) -->
-    <section class="ob-rhyme ob-cell ob-center" aria-label="How to explore">
-      <h3 class="ob-title">
-        Welcome to Graveyard Chemist’s Playground<br>
-        <span class="jp">ウェルカム〜(*´∀*)ﾉ"♡</span>
-      </h3>
+    		<section class="ob-rhyme ob-cell" aria-label="How to explore">
 
 				<p>Click and wonder, peek and play,<br>
 				Strange creations light your way.<br>
@@ -77,9 +79,8 @@
 				Stray awhile, explore the view-<br>
 				This playground's made for me and you.</p>
 			</section>
-			<img id="sticker" class="sticker ob-cell ob-moomin"
-			     src="assets/images/moomin1_sticker.png"
-			     alt="Moomin sticker">
+			<div id="ob-moomin" class="ob-moomin ob-cell" aria-hidden="true"></div>
+
 		</div>
 	</div>
 	
