fixing the moomin animation

--- a/index.html
+++ b/index.html
@@ -78,8 +78,14 @@
 				Stray awhile, explore the view-<br>
 				This playground's made for me and you.</p>
 			</section>
-			<div id="ob-moomin" class="ob-moomin ob-cell" aria-hidden="true"></div>
 
+			<div id="ob-moomin" class="ob-moomin ob-cell" aria-hidden="true">
+ 	 			<div class="moomin-wrap">
+    				<img src="assets/images/moomin1_sticker.png" alt="" class="moomin frame a">
+    				<img src="assets/images/moomin2_sticker.png" alt="" class="moomin frame b" aria-hidden="true">
+  				</div>
+			</div>
+			
 		</div>
 	</div>
 	
