made paragraph shorter

--- a/index.html
+++ b/index.html
@@ -70,12 +70,7 @@
 				</h3>
 				<p>Click and wonder, peek and play,<br>
 				Strange creations light your way.<br>
-				Where art and science twirl in time, <br>
-				A curious dance, a gentle rhyme. </p>
-				
-				<p>Let your child-heart guide the rule,<br>
-				Wonder grows where dreams are fuel.<br>
-				Stray awhile, explore the view-<br>
+				Stay awhile, explore the view-<br>
 				This playground's made for me and you.</p>
 			</section>
 
