changed the moomin image to a gif instead

--- a/index.html
+++ b/index.html
@@ -74,11 +74,10 @@
 				This playground's made for me and you.</p>
 			</section>
 
-			<div id="ob-moomin" class="ob-moomin ob-cell" aria-hidden="true">
- 	 			<div class="moomin-wrap">
-    				<img src="assets/images/moomin1_sticker.png" alt="" class="moomin frame a">
-    				<img src="assets/images/moomin2_sticker.png" alt="" class="moomin frame b" aria-hidden="true">
-  				</div>
+			<img id="ob-moomin" class="ob-moomin ob-cell"
+     src="assets/images/moomin.gif"
+     alt=""
+     aria-hidden="true">
 			</div>
 			
 		</div>
