changed size of gif again

--- a/index.html
+++ b/index.html
@@ -74,11 +74,9 @@
 				This playground's made for me and you.</p>
 			</section>
 
-			<img id="ob-moomin" class="ob-moomin ob-cell"
-     src="assets/images/moomin.gif"
-     alt=""
-     aria-hidden="true">
-			</div>
+			<img id="ob-moomin" class="ob-moomin" 
+				src="assets/images/moomin.gif" 
+				alt="Moomin animation">
 			
 		</div>
 	</div>
