--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
  				<span class="jp">ウェルカム〜(*´∀*)ﾉ"♡</span>
 				</h3>
 				<p>Click and wonder, peek and play,<br>
-				Strange creations light your way.<br>
+				Strange creations lighting my way.<br>
 				Stay awhile, explore the view-<br>
 				This playground's made for me and you.</p>
 			</section>
