--- a/index.html
+++ b/index.html
@@ -17,6 +17,47 @@
 	<link rel="stylesheet" href="css/components.css">
 	<link rel="stylesheet" href="css/motion.css">
 </head>
+<svg aria-hidden="true" class="svg-defs" width="0" height="0" style="position:absolute;left:-9999px;top:-9999px">
+  <defs>
+    <!-- Mint gradient (steampunk teal) -->
+    <linearGradient id="mintGrad" x1="0" y1="0" x2="1" y2="1">
+      <stop offset="0%"  stop-color="#63C3D6"/>
+      <stop offset="100%" stop-color="#1F6B7E"/>
+    </linearGradient>
+
+    <!-- “Rust” overlay: subtle monochrome noise, multiplied -->
+    <filter id="rusty" x="-20%" y="-20%" width="140%" height="140%">
+      <feTurbulence type="fractalNoise" baseFrequency="0.9" numOctaves="2" seed="7" result="noise"/>
+      <feColorMatrix type="saturate" values="0" in="noise" result="mono"/>
+      <!-- keep only a faint alpha so the effect is subtle -->
+      <feComponentTransfer in="mono" result="noiseya">
+        <feFuncA type="table" tableValues="0 0 .06 .16"/>
+      </feComponentTransfer>
+      <feBlend in="SourceGraphic" in2="noiseya" mode="multiply"/>
+    </filter>
+
+    <!-- Your gear as a reusable symbol; filled by the gradient -->
+    <symbol id="gear-shape" viewBox="0 0 512 512">
+      <g fill="url(#mintGrad)">
+        <!-- PASTE SHAPE PATHS (cleaned) -->
+        <g transform="translate(0,512) scale(0.1,-0.1)">
+          <path d="M2560 5109 c-642 -67 -1224 -344 -1671 -799 -420 -429 -678 -985 -744
+          -1609 -21 -194 -21 -538 0 -732 87 -809 577 -1550 1311 -1967 462 -260 1012
+          -370 1544 -306 1219 144 2147 1169 2147 2409 0 1339 -1071 2424 -2410 2464
+          -85 3 -193 -1 -277 -10z m405 -334 c1133 -144 1989 -1133 1989 -2276 0 -1259
+          -1016 -2275 -2275 -2275 -1259 0 -2275 1016 -2275 2275 0 1143 856 2132 1989
+          2276 152 20 417 20 572 0z"/>
+          <path d="M2537 4310 c-318 -39 -614 -163 -867 -364 -109 -88 -288 -289 -355
+          -395 -72 -114 -153 -284 -185 -386 -192 -627 -23 -1317 436 -1776 242 -242
+          542 -395 888 -456 139 -25 401 -23 541 4 326 62 616 214 850 449 287 287 440
+          643 462 1069 11 218 -22 448 -97 658 -130 363 -394 672 -745 868 -322 181
+          -704 259 -1028 219z"/>
+        </g>
+      </g>
+    </symbol>
+  </defs>
+</svg>
+
 <body>
 	<!-- ============================= -->
 	<!-- for 5 sec preloader   -->
@@ -65,13 +106,13 @@
     <!-- B) center quarter (instructions) -->
     		<section class="ob-rhyme ob-cell" aria-label="How to explore">
 				<h3 class="ob-title ob-cell">
- 		 		Welcome to Graveyard Chemist’s Playground<br>
+ 		 		Welcome to Graveyard Chemist’s Website<br>
  				<span class="jp">ウェルカム〜(*´∀*)ﾉ"♡</span>
 				</h3>
 				<p>Click and wonder, peek and play,<br>
 				Strange creations lighting my way.<br>
 				Stay awhile, explore the view-<br>
-				This playground's made for me and you.</p>
+				This pace was made for me and you.</p>
 			</section>
 
 			<img id="ob-moomin" class="ob-moomin" 
@@ -88,6 +129,20 @@
     <!-- ============================= -->
 		
 	<main id="room" hidden>
+
+		<header class="site-hero" aria-label="Site title">s
+  			<svg class="gear gear-left" viewBox="0 0 512 512" aria-hidden="true">
+    			<use href="#gear-shape"></use>
+  			</svg>
+
+  			<h1 class="site-title">Graveyard Chemist’s Little Playground!</h1>
+
+  			<svg class="gear gear-right" viewBox="0 0 512 512" aria-hidden="true">
+    			<use href="#gear-shape"></use>
+  			</svg>
+		</header>
+
+
 		<!-- Stage corner -->
 		<button id="hotspot-stage" class="hotspot" aria-label="Enter Stage"></button>
 
