added the blender glbs and images, tried to change the format of the heading for the main page as well.

--- a/index.html
+++ b/index.html
@@ -130,12 +130,12 @@
 		
 	<main id="room" hidden>
 
-		<header class="site-hero" aria-label="Site title">s
+		<header class="site-hero" aria-label="Site title">
   			<svg class="gear gear-left" viewBox="0 0 512 512" aria-hidden="true">
     			<use href="#gear-shape"></use>
   			</svg>
 
-  			<h1 class="site-title">Graveyard Chemist’s Little Playground!</h1>
+  			<h1 class="site-title">Graveyard Chemist's Little Playground!</h1>
 
   			<svg class="gear gear-right" viewBox="0 0 512 512" aria-hidden="true">
     			<use href="#gear-shape"></use>
