shortened the website title's name. looking better already :)

--- a/index.html
+++ b/index.html
@@ -106,7 +106,6 @@
     <!-- B) center quarter (instructions) -->
     		<section class="ob-rhyme ob-cell" aria-label="How to explore">
 				<h3 class="ob-title ob-cell">
- 		 		Welcome to Graveyard Chemist’s Website<br>
  				<span class="jp">ウェルカム〜(*´∀*)ﾉ"♡</span>
 				</h3>
 				<p>Click and wonder, peek and play,<br>
@@ -135,7 +134,7 @@
     			<use href="#gear-shape"></use>
   			</svg>
 
-  			<h1 class="site-title">Graveyard Chemist's Little Playground!</h1>
+  			<h1 class="site-title">Graveyard Chemist's Playground!</h1>
 
   			<svg class="gear gear-right" viewBox="0 0 512 512" aria-hidden="true">
     			<use href="#gear-shape"></use>
