added correct directory for svg file into html and fixed the css file.

--- a/index.html
+++ b/index.html
@@ -128,28 +128,23 @@
     <!-- ============================= -->
 		
 	<main id="room" hidden>
+		<svg class="gear gear-left" aria-hidden="true">
+    		<use href="assets/images/gears.svg#gear-shape"></use>
+  		</svg>
 
 		<header class="site-hero" aria-label="Site title">
-  			<svg class="gear gear-left" viewBox="0 0 512 512" aria-hidden="true">
-    			<use href="#gear-shape"></use>
+  			<svg class="gear gear-left" aria-hidden="true">
+    			<use href="assets/images/gears.svg#gear-shape"></use>
   			</svg>
 
   			<h1 class="site-title">Graveyard Chemist's Playground!</h1>
 
-  			<svg class="gear gear-right" viewBox="0 0 512 512" aria-hidden="true">
-    			<use href="#gear-shape"></use>
+  			<svg class="gear gear-right" aria-hidden="true">
+    			<use href="assets/images/gears.svg#gear-shape"></use>
   			</svg>
 		</header>
 
 
-		<!-- Stage corner -->
-		<button id="hotspot-stage" class="hotspot" aria-label="Enter Stage"></button>
-
-		<!-- Bulletin board corner -->
-		<button id="hotspot-board" class="hotspot" aria-label="Open Bulletin Board"></button>
-
-		<!-- Elevator corner -->
-		<button id="hotspot-elevator" class="hotspot" aria-label="Open Elevator"></button>
 	</main>
 	
 	
