fixed layout of gear to be apart of the header

--- a/index.html
+++ b/index.html
@@ -133,13 +133,13 @@
   		</svg>
 
 		<header class="site-hero" aria-label="Site title">
-  			<svg class="gear gear-left" aria-hidden="true">
+  			<svg class="gear gear-left" viewBox="0 0 166 166" aria-hidden="true">
     			<use href="assets/images/gears.svg#gear-shape"></use>
   			</svg>
 
   			<h1 class="site-title">Graveyard Chemist's Playground!</h1>
 
-  			<svg class="gear gear-right" aria-hidden="true">
+  			<svg class="gear gear-right" viewBox="0 0 166 166" aria-hidden="true">
     			<use href="assets/images/gears.svg#gear-shape"></use>
   			</svg>
 		</header>
