changed svg file and html format for heading gears

--- a/index.html
+++ b/index.html
@@ -126,26 +126,23 @@
     <!-- ============================= -->
     <!-- HOMEPAGE (room & navigation)  -->
     <!-- ============================= -->
-		
-	<main id="room" hidden>
-		<svg class="gear gear-left" aria-hidden="true">
+
+	<body class="page">
+  <!-- corner gears (external reference to <g id="gear-shape">) -->
+  		<svg class="gear gear-tl" viewBox="0 0 166 166" aria-hidden="true">
     		<use href="assets/images/gears.svg#gear-shape"></use>
   		</svg>
 
-		<header class="site-hero" aria-label="Site title">
-  			<svg class="gear gear-left" viewBox="0 0 166 166" aria-hidden="true">
-    			<use href="assets/images/gears.svg#gear-shape"></use>
-  			</svg>
-
-  			<h1 class="site-title">Graveyard Chemist's Playground!</h1>
-
-  			<svg class="gear gear-right" viewBox="0 0 166 166" aria-hidden="true">
-    			<use href="assets/images/gears.svg#gear-shape"></use>
-  			</svg>
-		</header>
-
-
-	</main>
+  		<svg class="gear gear-tr" viewBox="0 0 166 166" aria-hidden="true">
+    		<use href="assets/images/gears.svg#gear-shape"></use>
+  		</svg>
+	<header class="site-hero" aria-label="Site title">
+    	<h1 class="site-title">Graveyard Chemist's Playground!</h1>
+  	</header>
+		
+	<main id="room" hidden>
+    <!-- your main content -->
+  	</main>
 	
 	
     <!-- ============================= -->
