changed format for gear on html and css again.

--- a/index.html
+++ b/index.html
@@ -129,12 +129,8 @@
 
 	<body class="page">
   <!-- corner gears -->
-  		<svg class="gear gear-tl" viewBox="0 0 166 166" aria-hidden="true" focusable="false">
-    		<use href="assets/images/gears.svg#gear-shape" xlink:href="assets/images/gears.svg#gear-shape"></use>
-  		</svg>
- 	 	<svg class="gear gear-tr" viewBox="0 0 166 166" aria-hidden="true" focusable="false">
-    		<use href="assets/images/gears.svg#gear-shape" xlink:href="assets/images/gears.svg#gear-shape"></use>
-  		</svg>
+ 		<img class="gear gear-tl" src="assets/images/gears.svg" alt="" />
+  		<img class="gear gear-tr" src="assets/images/gears.svg" alt="" />
 
   		<!-- header stays clean so title size doesn't change -->
   		<header class="site-hero" aria-label="Site title">
