--- a/index.html
+++ b/index.html
@@ -12,14 +12,19 @@
     <title> Graveyard Chemist Website</title>
 	
 	<!-- Link to CSS files -->
-	<link rel="stylesheet" href="css/base.css">
 	<link rel="stylesheet" href="css/layout.css">
-	<link rel="stylesheet" href="css/components.css">
-	<link rel="stylesheet" href="css/motion.css">
+	<script type="importmap">
+ 	{
+    	"imports": {
+    		"three": "https://unpkg.com/three@0.160.0/build/three.module.js",
+    		"three/addons/": "https://unpkg.com/three@0.160.0/examples/jsm/"
+    	}
+  	}
+  	</script>
 </head>
 <svg aria-hidden="true" class="svg-defs" width="0" height="0" style="position:absolute;left:-9999px;top:-9999px">
   <defs>
-    <!-- Mint gradient (steampunk teal) -->
+    <!-- Mint gradient -->
     <linearGradient id="mintGrad" x1="0" y1="0" x2="1" y2="1">
       <stop offset="0%"  stop-color="#63C3D6"/>
       <stop offset="100%" stop-color="#1F6B7E"/>
@@ -29,7 +34,7 @@
     <filter id="rusty" x="-20%" y="-20%" width="140%" height="140%">
       <feTurbulence type="fractalNoise" baseFrequency="0.9" numOctaves="2" seed="7" result="noise"/>
       <feColorMatrix type="saturate" values="0" in="noise" result="mono"/>
-      <!-- keep only a faint alpha so the effect is subtle -->
+      <!-- keep only a faint alpha -->
       <feComponentTransfer in="mono" result="noiseya">
         <feFuncA type="table" tableValues="0 0 .06 .16"/>
       </feComponentTransfer>
@@ -39,7 +44,7 @@
     <!-- Your gear as a reusable symbol; filled by the gradient -->
     <symbol id="gear-shape" viewBox="0 0 512 512">
       <g fill="url(#mintGrad)">
-        <!-- PASTE SHAPE PATHS (cleaned) -->
+        <!-- Pasted Shape Paths for gear -->
         <g transform="translate(0,512) scale(0.1,-0.1)">
           <path d="M2560 5109 c-642 -67 -1224 -344 -1671 -799 -420 -429 -678 -985 -744
           -1609 -21 -194 -21 -538 0 -732 87 -809 577 -1550 1311 -1967 462 -260 1012
@@ -137,7 +142,7 @@
     		<h1 class="site-title">Graveyard Chemist's Playground!</h1>
   		</header>
 
-  		<main id="room" hidden><!-- … --></main>		
+  		<main id="room" aria-label="3D room"></main>
 	
 	
     <!-- ============================= -->
