--- a/legacy/20250921-193220/index.html
+++ b/legacy/20250921-193220/index.html
@@ -134,11 +134,6 @@
     <!-- ============================= -->
 
 	<body class="page">
-		<div id="app"></div></div>
-
-		<div class ="experience">
-			<canvas class="experience-canvas"></canvas>
-		</div>
   <!-- corner gears -->
  		<img class="gear gear-tl" src="assets/images/gears.svg" alt="" />
   		<img class="gear gear-tr" src="assets/images/gears.svg" alt="" />
@@ -148,7 +143,11 @@
     		<h1 class="site-title">Graveyard Chemist's Playground!</h1>
   		</header>
 
-  		<main id="room" aria-label="3D room"></main>
+		<div id="app"><</div>
+
+  		<div id="room" aria-label="3D room">
+    		<canvas id="experience-canvas" class="experience-canvas"></canvas>
+		</div>
 	
 	
     <!-- ============================= -->
