simplified the main.js code to get a test cube running.

--- a/legacy/20250921-193220/index.html
+++ b/legacy/20250921-193220/index.html
@@ -145,9 +145,9 @@
 
 		<div id="app"><</div>
 
-  		<div id="room" aria-label="3D room">
+  		<main id="room" aria-label="3D room">
     		<canvas id="experience-canvas" class="experience-canvas"></canvas>
-		</div>
+		</main>
 	
 	
     <!-- ============================= -->
